# AnimatedSVG

./: .gitignore  LICENSE.txt  README.md  library.properties
demo/svgviewer/: CMakeLists.txt  CmdLineParser.h  Makefile  svgviewer.cpp
examples/TFT_eSPI/ball_bounce/: ball_bounce.ino  ball_bounce_svg.h
examples/TFT_eSPI/watch/: animatedsvg_svg.h  watch.ino  watch_svg.h
src/: AnimatedSVG.cpp  AnimatedSVG.h  ArduinoSVG.cpp  ArduinoSVG.h  nanosvg.h  nanosvgrast.h
svgviewer/: CMakeLists.txt  CmdLineParser.h  svgviewer.cpp
